--- a/Fusion/PortfolioOptimization/portfolio-with-fusion.ipynb
+++ b/Fusion/PortfolioOptimization/portfolio-with-fusion.ipynb
@@ -33,7 +33,14 @@
     "\n",
     "* no sells are allowed ($x\\geq 0$),\n",
     "\n",
-    "We want to find a good compromise between the return and the risk. A typical approach is maximize the expected return paying some fee for the risk. This is achieved introducing nonnegative weights $\\alpha$ that measures how much we are willing to pay for the risk that we take. For each given $alpha$ we find a pair $s,x$ that defines a curve named the *efficient frontier.*\n",
+    "We want to find a good compromise between the return and the risk. A typical approach is maximize the expected return paying some fee for the risk. This is achieved introducing a nonnegative weight $\\alpha$ that measures how much we are willing to pay for the risk that we take, i.e.\n",
+    "\n",
+    "* the smaller is $\\alpha$ the higher is the risk we accept,\n",
+    "* the larger is $\\alpha$, the smaller is the risk we accept.\n",
+    "\n",
+    "As limit case, for $\\alpha=0$ the risk is completely ignored and we obtained the mos\n",
+    "\n",
+    "For each given $\\alpha$ we find a pair $s,x$ that defines a curve named the *efficient frontier.*\n",
     "\n",
     "The model is formulated as follows:\n",
     "\n",
@@ -366,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.5+"
   }
  },
  "nbformat": 4,
