--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -272,18 +272,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notes\n",
-    "----------\n",
-    "\n",
-    "1. The order in which the model is declared is not important, i.e. constraints, variables and the objective functions can be declared in any order, as long as it makes sense.\n",
-    "\n",
-    "2. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
     "\n",
     "The **MOSEK** logo and name are trademarks of Mosek ApS.\n",
@@ -315,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.5+"
   }
  },
  "nbformat": 4,
