--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -74,7 +74,7 @@
     "    \\begin{aligned}\n",
     "    & \\min t \\\\\n",
     "    & s.t.\\\\\n",
-    "    & (t, x) \\in \\mathcal{Q}^{n+1}  \\Leftrightarrow t\\geq \\|x\\|_2\\\\\n",
+    "    & t\\geq \\|x\\|_2 \\Leftrightarrow  (t, x) \\in \\mathcal{Q}^{n+1} \\\\\n",
     "    & Ax = b \\\\\n",
     "    & l_x\\leq x \\leq u_x.\n",
     "    \\end{aligned}\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
