--- a/Fusion/minimum ellipsoid.ipynb
+++ b/Fusion/minimum ellipsoid.ipynb
@@ -266,22 +266,17 @@
     "    \n",
     "    with Model(\"minimal sphere enclosing a set of points - dual\") as M:\n",
     "  \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        Y= M.variable(NDSet(k,n+1), Domain.unbounded())\n",
-    "#        z= M.variable(k,Domain.unbounded())\n",
+    "        Y= M.variable(NDSet(k,n), Domain.unbounded())\n",
+    "        z= M.variable(k,Domain.unbounded())\n",
     "                    \n",
-    "        M.constraint(Expr.sum(Y.slice([0,0],[k,1])), Domain.equalsTo(1.) )\n",
+    "        M.constraint(Expr.sum(z), Domain.equalsTo(1.) )\n",
     "        \n",
     "        e= [1.0 for i in range(k)]\n",
-    "        M.constraint(Expr.mul(Y.slice([0,1],[k,n+1]).transpose(), e), Domain.equalsTo(0.) )\n",
+    "        M.constraint(Expr.mul(e,Y), Domain.equalsTo(0.) )\n",
     "\n",
-    "        M.constraint( Y, Domain.inQCone())\n",
-    "#        M.constraint( Expr.hstack(z,Y), Domain.inQCone())\n",
+    "        M.constraint( Expr.hstack(z,Y), Domain.inQCone())\n",
     "        \n",
-    "        M.objective( ObjectiveSense.Maximize, Expr.dot( DenseMatrix(P), Y.slice([0,1],[k,n+1])) )\n",
+    "        M.objective( ObjectiveSense.Maximize, Expr.dot( DenseMatrix(P), Y )) \n",
     "  \n",
     "        M.setLogHandler(open('logd','wt'))\n",
     "\n",
@@ -662,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.5+"
   }
  },
  "nbformat": 4,
