several improvements on notebooks

--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -34,15 +34,17 @@
     "We want to introduce an *object-oriented* interface for optimization problem of the form:\n",
     "\n",
     "\\begin{equation}\n",
-    "  \\begin{array}{lll}\n",
-    "    \\min & \\sum_j \\langle C_j , X_j \\rangle&\\\\\n",
-    "    s.t.&&\\\\\n",
-    "    & \\sum_j \\langle A_{ij},  X_j \\rangle+ B_i \\in \\mathcal{K}_i^{n_i} & i=1,\\ldots,k\\\\\n",
+    "  \\begin{array}{llcll}\n",
+    "    \\min & \\sum_j c_j^T x_j + \\sum_j \\langle C_j , X_j \\rangle&&\\\\\n",
+    "    s.t.&&&\\\\\n",
+    "    & \\sum_j A_j^T x_j \\leq u_i & \\in & [l_i, u_i] & i=1,\\ldots,l.\\\\\n",
+    "    & \\sum_j A_j^T x_j + b_i &\\in & \\{\\mathcal{Q}^{n_i}, \\mathcal{Q}_r^{n_i}, \\} & i=1,\\ldots,k.\\\\\n",
+    "    & \\sum_j A_{ij} \\star  X_j + B_i & \\in &\\mathbb{S}_+^{n_i} & i=1,\\ldots,t.\\\\\n",
     "  \\end{array}\n",
     "\\end{equation}\n",
     "\n",
     "\n",
-    "Where $A_{ij},B_i$ and $C_j$ are matrices of suitable dimensions, $X_j$ are bidimensional variables. Cones $\\mathcal{K}_i^{n_i}$ are  \n",
+    "where we assume dimensions match accordingly to common rules. Cones $\\mathcal{K}_i^{n_i}$ are  \n",
     "\n",
     "* $\\mathbb{R}_+$ - positive orthant ,\n",
     "\n",
@@ -52,7 +54,7 @@
     "\n",
     "* $\\mathbb{S}_+$ - PSD matrices.\n",
     "\n",
-    "Dimensions must match accordingly.\n",
+    "By a proper choice of dimensions, cones and coefficients, we obtain LPs, CQPs and SDPs.\n",
     "\n",
     "# Example: a simple conic quadratic problem\n",
     "\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -164,40 +166,24 @@
     "\n",
     "* Linear equalities and inequalities,\n",
     "\n",
-    "* Unboundness.\n",
-    "\n",
-    "\n",
-    "-----------------------------------------------------------------------------------\n",
-    "\n",
-    "The objective function follows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "M.objective(ObjectiveSense.Minimize, t)"
+    "* Unboundness.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we can declare\n",
+    "For what concern the constraints, we need to:\n",
     "\n",
-    "* the conic quadratic constraint stacking $t$ and $x$ together,\n",
-    "* the linear equations.\n",
+    "* stack $t$ and $x$ together, for the conic quadratic constraint;\n",
+    "* perform matrix-vector multiplication to define the linear equations.\n",
     "\n",
     "Linear operators are provided by the `Expr` class. Here is the code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -212,12 +198,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that the `Model.constraint` method returns an object we can refer thereafter.\n",
+    "\n",
+    "\n",
+    "The objective function is what we miss:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "M.objective(ObjectiveSense.Minimize, t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now we only need to run the solver and print the solution querying the `x` handler:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
