--- a/Fusion/PortfolioOptimization/portfolio-with-fusion.ipynb
+++ b/Fusion/PortfolioOptimization/portfolio-with-fusion.ipynb
@@ -44,7 +44,7 @@
     "We want to find a good compromise between the return and the risk. A typical approach is maximize the expected return paying some fee for the risk. This is achieved introducing a nonnegative weight $\\alpha$ that measures how much we are willing to pay for the risk that we take, i.e. we want to maximize\n",
     "\n",
     "\\begin{equation}\n",
-    "   \\mbox{maximize}   \\quad \\mu^T x - \\alpha \n",
+    "   \\mbox{maximize}   \\quad \\mu^T x - \\alpha s\n",
     "\\end{equation}\n",
     "\n",
     "where $s$ is a variable representing the risk.\n",
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5+"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
