--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -37,9 +37,9 @@
     "  \\begin{array}{llcll}\n",
     "    \\min & \\sum_j c_j^T x_j + \\sum_j \\langle C_j , X_j \\rangle&&\\\\\n",
     "    s.t.&&&\\\\\n",
-    "    & \\sum_j A_j^T x_j \\leq u_i & \\in & [l_i, u_i] & i=1,\\ldots,l.\\\\\n",
+    "    & \\sum_j A_j^T x_j  & \\in & [l_i, u_i] & i=1,\\ldots,l.\\\\\n",
     "    & \\sum_j A_j^T x_j + b_i &\\in & \\{\\mathcal{Q}^{n_i}, \\mathcal{Q}_r^{n_i}, \\} & i=1,\\ldots,k.\\\\\n",
-    "    & \\sum_j A_{ij} \\star  X_j + B_i & \\in &\\mathbb{S}_+^{n_i} & i=1,\\ldots,t.\\\\\n",
+    "    & \\sum_j \\langle A_{ij} , X_j\\rangle + B_i & \\in &\\mathbb{S}_+^{n_i} & i=1,\\ldots,t.\\\\\n",
     "  \\end{array}\n",
     "\\end{equation}\n",
     "\n",
@@ -76,7 +76,7 @@
     "    \\begin{aligned}\n",
     "    & \\min t \\\\\n",
     "    & s.t.\\\\\n",
-    "    & t\\geq \\|x\\|_2 \\Leftrightarrow  (t, x) \\in \\mathcal{Q}^{n+1} \\\\\n",
+    "    & t\\geq \\|x\\|_2 \\Leftrightarrow  [t, x] \\in \\mathcal{Q}^{n+1} \\\\\n",
     "    & Ax = b \\\\\n",
     "    & l_x\\leq x \\leq u_x.\n",
     "    \\end{aligned}\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
    "source": [
     "from mosek.fusion import *\n",
     "\n",
-    "M = Model('My test')"
+    "M = Model()"
    ]
   },
   {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -173,24 +173,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For what concern the constraints, we need to:\n",
-    "\n",
-    "* stack $t$ and $x$ together, for the conic quadratic constraint;\n",
-    "* perform matrix-vector multiplication to define the linear equations.\n",
-    "\n",
-    "Linear operators are provided by the `Expr` class. Here is the code:"
+    "To define the conic quadratic constraint on the norm of $x$ we need to stack $t$ and $x$ together: this operations are provided by the class `Variable`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mosek.fusion.ConicConstraint instance at 0x7fe896a24fc8>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.constraint(Variable.vstack(t, x), Domain.inQCone())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the linear equalities, the matrix-vector multiplication is provided, along with other linear operators, by the `Expr` class. Here is the code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "M.constraint(Expr.vstack(t, x), Domain.inQCone())\n",
-    "\n",
     "le = M.constraint( Expr.mul(A,x), Domain.equalsTo(b))"
    ]
   },
@@ -206,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -310,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5+"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
