fixed error in portfolio

--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -186,10 +186,10 @@
     {
      "data": {
       "text/plain": [
-       "<mosek.fusion.ConicConstraint instance at 0x7fe896a24fc8>"
+       "<mosek.fusion.ConicConstraint instance at 0x7fedf3e319e0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
