fixed small typo

--- a/Portfolio/Risk Parity Portfolio Selection using MOSEK Optimizer API.ipynb
+++ b/Portfolio/Risk Parity Portfolio Selection using MOSEK Optimizer API.ipynb
@@ -322,7 +322,7 @@
     "    f \\ln(g\\cdot x + h),\n",
     "$$\n",
     "\n",
-    "where $f,g,h$ are constants choosen in a way the function must be concave. In our case $f=1$, $g=1$ and $h=0$.\n",
+    "where $f,g,h$ are constants choosen in a way the function must be concave. In our case $f=-b$, $g=1$ and $h=0$.\n",
     "\n",
     "In terms of implementation we do"
    ]
@@ -335,7 +335,7 @@
    },
    "outputs": [],
    "source": [
-    "#define the logarithm for n variables\n",
+    "#define logarithm for all n variables\n",
     "opro = [mosek.scopr.log] * n \n",
     "\n",
     "#define the variable indexes\n",
