updated other notebooks to Python3 and MOSEK 8

--- a/Fusion/Regression techniques using MOSEK Fusion API.ipynb
+++ b/Fusion/Regression techniques using MOSEK Fusion API.ipynb
@@ -334,12 +334,12 @@
     "This is a typical case where conic quadratic optimization shines. The model is therefore:\n",
     "\n",
     "$$\n",
-    "\\begin{array}{lll}\n",
-    " \\min & \\sum_i t_i\\\\\n",
-    " & (t_i, [Xw-y]_i)\\in \\mathcal{Q^2}  & i=1,\\ldots,m\\\\\n",
-    " & (s_i,z_i, t_i) \\in \\mathcal{Q_r^3}& i=1,\\ldots,m\\\\\n",
-    " & (1/8,t_i, s_i) \\in \\mathcal{Q_r^3}& i=1,\\ldots,m.\n",
-    "\\end{array}\n",
+    " \\begin{array}{lll}\n",
+    "  \\min & \\sum_i t_i                        &             \\\\\n",
+    "      & (t_i, [Xw-y]_i)\\in \\mathcal{Q^2}  & i=1,\\ldots,m, \\\\\n",
+    "      & (s_i,z_i, t_i) \\in \\mathcal{Q_r^3}& i=1,\\ldots,m,\\\\\n",
+    "      & (1/8,t_i, s_i) \\in \\mathcal{Q_r^3}& i=1,\\ldots,m.\n",
+    " \\end{array}\n",
     "$$\n",
     "\n",
     "A compact Fusion implementation is "
