--- a/Fusion/Quickstart/Fusion Quickstart.ipynb
+++ b/Fusion/Quickstart/Fusion Quickstart.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -186,16 +186,22 @@
     {
      "data": {
       "text/plain": [
-       "<mosek.fusion.ConicConstraint instance at 0x7fedf3e319e0>"
+       "mosek.fusion.ConicConstraint: ConicConstraint( (6), QuadCone,\n",
+       "  [0] :  + 1.0 t[0]   : element in a quadratic cone,\n",
+       "  [1] :  + 1.0 x[0]  : element in a quadratic cone,\n",
+       "  [2] :  + 1.0 x[1]  : element in a quadratic cone,\n",
+       "  [3] :  + 1.0 x[2]  : element in a quadratic cone,\n",
+       "  [4] :  + 1.0 x[3]  : element in a quadratic cone,\n",
+       "  [5] :  + 1.0 x[4]  : element in a quadratic cone )"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "M.constraint(Variable.vstack(t, x), Domain.inQCone())"
+    "M.constraint(Var.vstack(t, x), Domain.inQCone())"
    ]
   },
   {
@@ -207,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +263,8 @@
      "text": [
       "primal solution status =  SolutionStatus.Optimal\n",
       "primal solution        = \n",
-      "[-1.2462112350726904e-08, 14.399999925447373, 4.800000005447712, 4.1706478408768495e-08, -1.3557713255520233e-08]\n"
+      "[  3.99233226e-11   1.44000000e+01   4.80000000e+00   1.40720024e-11\n",
+      "  -4.48202344e-11]\n"
      ]
     }
    ],
@@ -277,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -288,7 +295,7 @@
      "output_type": "stream",
      "text": [
       "dual solution status =  SolutionStatus.Optimal\n",
-      "Ax-b dual mult.      =  [0.14471806520291086, 0.2827359317801117, -0.2103780441985366]\n"
+      "Ax-b dual mult.      =  [ 0.46796339  1.09085195 -0.85687005]\n"
      ]
     }
    ],
@@ -301,24 +308,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "The **MOSEK** logo and name are trademarks of Mosek ApS.\n",
-    "\n",
-    "The code is provided as-is. Compatibility with future release of **MOSEK** or the `Fusion API` are not guaranteed.\n",
-    "\n",
-    "For more information contact [support_at_mosek.com](mailto:support@mosek.com)\n",
-    "\n",
-    "---------------------------------------------------------------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/88x31.png\" /></a><br /><span xmlns:dct=\"http://purl.org/dc/terms/\" property=\"dct:title\">The MOSEK collection of iPython Notebook</span> by <a xmlns:cc=\"http://creativecommons.org/ns#\" href=\"www.mosek.com\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">MOSEK ApS</a> is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>.<br />Based on a work at <a xmlns:dct=\"http://purl.org/dc/terms/\" href=\"https://github.com/MOSEK\" rel=\"dct:source\">https://github.com/MOSEK</a>.<br />Permissions beyond the scope of this license may be available at <a xmlns:cc=\"http://creativecommons.org/ns#\" href=\"www.mosek.com\" rel=\"cc:morePermissions\">www.mosek.com</a>."
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />This work is licensed under a <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Creative Commons Attribution 4.0 International License</a>. The **MOSEK** logo and name are trademarks of <a href=\"http://mosek.com\">Mosek ApS</a>. The code is provided as-is. Compatibility with future release of **MOSEK** or the `Fusion API` are not guaranteed. For more information contact our [support](mailto:support@mosek.com). \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -332,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
