--- a/Fusion/surfacecycles/surfaceCycles.ipynb
+++ b/Fusion/surfacecycles/surfaceCycles.ipynb
@@ -75,7 +75,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -115,14 +117,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "![](https://raw.githubusercontent.com/MOSEK/Tutorials/master/Fusion/surfacecycles/surface1.png )"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now imagine that each loop is a rubber band that can be stretched in a continuous way and slide on the surface. Then the violet loop is not very interesting - it lies in a small patch of the surface and if we start shrinking it, it will collapse to a point (in other words, it is *contractible*). The yellow loop is different - it circles around a hole in the surface, and no matter how much we deform it, it will not disappear. We say this loop *detects a feature* - in this case the feature is one of the holes. The red loop has the same property. Moreover, the yellow and red loops are *homotopic* - each of them can be continuosly moulded into the second one - i.e. they detect the same feature (hole).\n",
     "\n",
@@ -133,7 +141,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -146,7 +156,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## First problem: shortest equivalent representation of a cycle\n",
     "Suppose the surface has $v$ vertices, $e$ edges and $t$ triangles. It is convenient to represent it by *boundary matrices*, which are just variants of the <a href=\"https://en.wikipedia.org/wiki/Incidence_matrix\">incidence matrix of a graph</a>. Specifically, we have a linear map $D_1:\\mathbb{R}^e\\to\\mathbb{R}^v$ given on the basis vectors by:\n",
@@ -180,7 +193,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -260,7 +275,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The inititlization part processes the PLY description of the surface, initializes the sparse boundary matrices and sets up a linear program with the parameter $c$ as a variable. In subsequent optimizations (the method `short`) $c$ is set to the actual input cycle.\n",
     "\n",
@@ -272,7 +290,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1074,26 +1094,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Indeed, if we again imagine the yellow loop is made out of rubber, then once it starts contracting it will reach its minimum length when it sits tightly around the mug's handle."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Detecting features\n",
     "OK, but what if we don't have any predefined cycle, and we would simply like to visualize all topological features on a given input surface using shortest possible loops? In general, this is a hard problem, for which some algorithms are known on surfaces. However, we can use our model to try a more pedestrian approach, which is not perfect, but often good enough for visualization.\n",
     "\n",
-    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $A=\\left[\\begin{eqnarray} D_1 \\\\ D_2^T\\end{eqnarray}\\right]$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
+    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $A=\\left[\\begin{eqnarray*} D_1 \\\\ D_2^T\\end{eqnarray*}\\right]$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1112,7 +1140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For an orientable surface the dimension of the nullspace of $A$ equals $2g$, where $g$ is the <a href=\"https://en.wikipedia.org/wiki/Genus_(mathematics)\">genus</a>, or the number of holes. For example, the torus has one hole and two essential features: the parallel and the meridian cycle.\n",
     "\n",
@@ -1123,7 +1154,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2722,7 +2755,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The two projections of the torus do not reveal where the holes are. In yellow we see the dense cycles found by SVD.  Their shortest homologous red versions make this a bit more clear. For example, the coil-shaped part of the first cycle clearly detects the hole in the middle of the torus.\n",
     "\n",
@@ -2733,7 +2769,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -4334,7 +4372,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## One more example: interior point vs. basic solution\n",
     "Here is a demonstration of a (reasonably) practical situation where we can see the interior point and basic solutions. Suppose we solve the problem on the mug again, this time using the discrete metric where every edge has weight 1, and we explicitly ask for the result of interior point optimization."
@@ -4344,7 +4385,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -5146,7 +5189,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We don't get a single cycle any more, instead we have a collection of cycles. This happens because there are many shortest cycles of the same length in this homology class, and the interior point optimizer converges to some convex combination of all of them. If we ask for a basic solution instead, we get one of those cycles - which one can depend on many factors, such as the order in which the triangles are listed in the model. In particular it should not be surprising that different basic solutions can be returned in different circumstances."
    ]
@@ -5155,7 +5201,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
