--- a/Fusion/surfacecycles/surfaceCycles.ipynb
+++ b/Fusion/surfacecycles/surfaceCycles.ipynb
@@ -178,7 +178,7 @@
     "We can now formulate the following problem: given a cycle $c\\in\\mathbb{R}^e$, find the shortest cycle that detects the same topological features as $c$ (strictly speaking, the shortest cycle *homologous* to $c$). Suppose $w_1,\\ldots,w_e$ are the weights (lengths) of the edges.\n",
     "\n",
     "$$\n",
-    "\\begin{array}\n",
+    "\\begin{array}{ll}\n",
     "\\textrm{minimize}   & \\sum_{i=1}^e w_i|x_i| \\\\\n",
     "\\textrm{subject to} & x-c=D_2y \\\\\n",
     "                    & x\\in\\mathbb{R}^e, y\\in\\mathbb{R}^t\n",
@@ -1112,7 +1112,7 @@
     "## Detecting features\n",
     "OK, but what if we don't have any predefined cycle, and we would simply like to visualize all topological features on a given input surface using shortest possible loops? In general, this is a hard problem, for which some algorithms are known on surfaces. However, we can use our model to try a more pedestrian approach, which is not perfect, but often good enough for visualization.\n",
     "\n",
-    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $A=\\left[\\begin{eqnarray*} D_1 \\\\ D_2^T\\end{eqnarray*}\\right]$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
+    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $A=\\left[\\begin{array}{l} D_1 \\\\ D_2^T\\end{array}\\right]$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
    ]
   },
   {
