--- a/Fusion/surfacecycles/surfaceCycles.ipynb
+++ b/Fusion/surfacecycles/surfaceCycles.ipynb
@@ -1112,7 +1112,7 @@
     "## Detecting features\n",
     "OK, but what if we don't have any predefined cycle, and we would simply like to visualize all topological features on a given input surface using shortest possible loops? In general, this is a hard problem, for which some algorithms are known on surfaces. However, we can use our model to try a more pedestrian approach, which is not perfect, but often good enough for visualization.\n",
     "\n",
-    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $A=\\left[\\begin{array}{l} D_1 \\\\ D_2^T\\end{array}\\right]$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
+    "Without going into too much algebra, the space of features on the surface can be identified with the nullspace of the matrix $$A=\\left[\\begin{array}{l} D_1 \\\\ D_2^T\\end{array}\\right]$$ (for the experts, we are now computing first homology with real coefficients). This can be easily found using singular value decomposition:"
    ]
   },
   {
