--- a/Fusion/surfacecycles/surfaceCycles.ipynb
+++ b/Fusion/surfacecycles/surfaceCycles.ipynb
@@ -112,7 +112,7 @@
    },
    "source": [
     "## A crash-course in homotopy\n",
-    "A triangulated surface is a mesh of 2D triangles in 3D that fit together to form a surface. The vertices and edges of a triangulation form a graph. The *cycles* in that graph can be used to detedt interesting *topological features*. For an example of what that means, see the three loops on the surface below:"
+    "A triangulated surface is a mesh of 2D triangles in 3D that fit together to form a surface. The vertices and edges of a triangulation form a graph. The *cycles* in that graph can be used to detect interesting *topological features*. For an example of what that means, see the three loops on the surface below:"
    ]
   },
   {
