--- a/Fusion/surfacecycles/surfaceCycles.ipynb
+++ b/Fusion/surfacecycles/surfaceCycles.ipynb
@@ -162,13 +162,13 @@
    },
    "source": [
     "## First problem: shortest equivalent representation of a cycle\n",
-    "Suppose the surface has $v$ vertices, $e$ edges and $t$ triangles. It is convenient to represent it by *boundary matrices*, which are just variants of the <a href=\"https://en.wikipedia.org/wiki/Incidence_matrix\">incidence matrix of a graph</a>. Specifically, we have a linear map $D_1:\\mathbb{R}^e\\to\\mathbb{R}^v$ given on the basis vectors by:\n",
+    "Suppose the surface has $v$ vertices, $e$ edges and $t$ triangles. It is convenient to represent it by *boundary matrices*, which are just variants of the <a href=\"https://en.wikipedia.org/wiki/Incidence_matrix\">incidence matrix of a graph</a>. Specifically, let $V(i)$, $E(ij)$ and $T(ijk)$ denote the vertex, edge and triangle with the given vertex set. Then we have a linear map $D_1:\\mathbb{R}^e\\to\\mathbb{R}^v$ given on the basis vectors by:\n",
     "\n",
-    "$$D_1(\\mathbf{e}_{ij})=\\mathbf{e}_j-\\mathbf{e}_{i}$$\n",
+    "$$D_1(\\mathbf{e}_{E(ij)})=\\mathbf{e}_{V(j)}-\\mathbf{e}_{V(i)}$$\n",
     "\n",
     "and we identify $D_1\\in \\mathbb{R}^{v\\times e}$ with the matrix of this map. Similarly, we can record the incidence between triangles and edges by $D_2:\\mathbb{R}^t\\to\\mathbb{R}^e$:\n",
     "\n",
-    "$$D_2(\\mathbf{e}_{ijk})=\\mathbf{e}_{jk}-\\mathbf{e}_{ik}+\\mathbf{e}_{ij}$$\n",
+    "$$D_2(\\mathbf{e}_{T(ijk)})=\\mathbf{e}_{E(jk)}-\\mathbf{e}_{E(ik)}+\\mathbf{e}_{E(ij)}$$\n",
     "\n",
     "and let $D_2\\in \\mathbb{R}^{e\\times t}$ be its matrix. We refer to <a href=\"https://en.wikipedia.org/wiki/Simplicial_homology\">other sources</a> for more details. Note that matrices $D_1,D_2$ are extremely sparse - they have just two, resp. three, nonzeros in each column.\n",
     "\n",
