Update image links

--- a/Fusion/Regression techniques using MOSEK Fusion API.ipynb
+++ b/Fusion/Regression techniques using MOSEK Fusion API.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![MOSEK ApS](https://mosek.com/files/mosek_logo_color.png )\n",
+    "![MOSEK ApS](https://www.mosek.com/static/images/branding/webgraphmoseklogocolor.png )\n",
     "\n",
     "# Linear Regression techniques using MOSEK Fusion API\n",
     "\n",
