--- a/Fusion/regression-various/regression-leastsquares.ipynb
+++ b/Fusion/regression-various/regression-leastsquares.ipynb
@@ -30,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "![MOSEK ApS](https://mosek.com/files/mosek_logo_color.png )"
+      "![MOSEK ApS](https://www.mosek.com/static/images/branding/webgraphmoseklogocolor.png )"
      ]
     },
     {
