--- a/Fusion/unitcommitment/ucp.ipynb
+++ b/Fusion/unitcommitment/ucp.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "![MOSEK ApS](https://mosek.com/files/mosek_logo_color.png )"
+    "![MOSEK ApS](https://www.mosek.com/static/images/branding/webgraphmoseklogocolor.png )"
    ]
   },
   {
