--- a/Portfolio/Risk Parity Portfolio Selection using MOSEK Optimizer API.ipynb
+++ b/Portfolio/Risk Parity Portfolio Selection using MOSEK Optimizer API.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![MOSEK ApS](https://mosek.com/files/mosek_logo_color.png )\n",
+    "![MOSEK ApS](https://www.mosek.com/static/images/branding/webgraphmoseklogocolor.png )\n",
     "\n",
     "\n",
     "## Risk Parity Portfolio Selection using MOSEK Optimizer API\n",
