Binary Quadratic solver update

--- a/Fusion/BinaryQuadratic-SDP/binquad.ipynb
+++ b/Fusion/BinaryQuadratic-SDP/binquad.ipynb
@@ -137,18 +137,21 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "solver = BB(Q, P, R)\n",
     "solver.solve()\n",
-    "solver.summary()"
+    "solver.summary()\n",
+    "```"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "REL_SOLVED ACTIVE_NDS       OBJ_BOUND        BEST_OBJ\n",
     "         1          0  -10000000000.0  -34.1829220672\n",
     "         1          0  -40.9578610377  -34.1829220672\n",
@@ -170,7 +173,8 @@
     "sol = [0 0 1 0 1 1 0 1 0 1 0 1 1 1 1 0 0 1 0 1 1 0 1 0 1 0 0 0 0 0]\n",
     "relaxations   = 25\n",
     "intpntIter    = 243\n",
-    "optimizerTime = 0.194850206375"
+    "optimizerTime = 0.194850206375\n",
+    "```"
    ]
   },
   {
