Binary Quadratic solver update

--- a/Fusion/BinaryQuadratic-SDP/binquad.ipynb
+++ b/Fusion/BinaryQuadratic-SDP/binquad.ipynb
@@ -206,8 +206,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "if np.ceil(self.lb) >= self.ub:"
    ]
