--- a/Fusion/BinaryQuadratic-SDP/binquad.ipynb
+++ b/Fusion/BinaryQuadratic-SDP/binquad.ipynb
@@ -250,7 +250,7 @@
     "\n",
     "![](files/stats/bls.png )\n",
     "\n",
-    "Horizontal scale: $m$. Each dot corresponds to an instance. Blue: this algorithm. Red: mixed-integer SOCP in MOSEK. Left: number of relaxations solved. Right: total time spent in the MOSEK optimizer (sec.). Log scale."
+    "Horizontal scale: $m$. Each dot corresponds to an instance. Blue: this algorithm. Red: mixed-integer SOCP in MOSEK. Left: number of relaxations solved. Right: total time spent in the MOSEK optimizer (single-thread, sec.). Log scale."
    ]
   },
   {
