--- a/Fusion/BinaryQuadratic-SDP/binquad.ipynb
+++ b/Fusion/BinaryQuadratic-SDP/binquad.ipynb
@@ -40,7 +40,7 @@
     "\\end{array}\n",
     "\\end{equation}\n",
     "\n",
-    "The value of the relaxation is a lower bound for the original problem as we see by setting $X=x^Tx$ for $x\\in\\{0,1\\}^n$.\n",
+    "The value of the relaxation is a lower bound for the original problem as we see by setting $X=xx^T$ for $x\\in\\{0,1\\}^n$.\n",
     "\n",
     "The algorithm maintains a lower bound ``lb``, upper bound ``ub`` (objective value of the best integer solution found) and a queue of active nodes. We follow these rules:\n",
     "\n",
